--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ rust-base58 = "^0.0"
 rusty-leveldb = "^0.3"
 dirs = "^3.0"
 rayon = "^1.3"
+mongodb = "2.1.0"
+# tokio = { version = "1.15.0", features = ["full"] }
 
 # The development profile, used for `cargo build`
 [profile.dev]
