--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ homepage = "https://github.com/gcarq/rusty-blockparser/"
 readme = "README.md"
 keywords = ["Cryptocurrency", "Bitcoin", "Litecoin", "Blockchain", "Parser"]
 license = "GPL-3.0"
+edition = "2021"
 
 [dependencies]
 time = { version = "^0.2", default-features = false, features = ["std"] }
@@ -20,8 +21,11 @@ rust-base58 = "^0.0"
 rusty-leveldb = "^0.3"
 dirs = "^3.0"
 rayon = "^1.3"
-mongodb = "2.1.0"
-# tokio = { version = "1.15.0", features = ["full"] }
+
+[dependencies.mongodb]
+version = "2.1.0"
+default-features = false
+features = ["sync"]
 
 # The development profile, used for `cargo build`
 [profile.dev]
